# nano-eval

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  core.py  nano_eval.py  pyproject.toml  schema.py
debug/: logging_server.py  send_lm_eval.py  send_nano_eval.py
debug/request_logs/: 001_nano-eval_20260213_121736_raw.json  001_nano-eval_20260213_121736_readable.json  002_lm-eval_20260213_121747_raw.json  002_lm-eval_20260213_121747_readable.json
nano_eval/: __init__.py  __main__.py  _types.py  core.py
nano_eval/tasks/: __init__.py  chartqa.py  gsm8k.py
results/: results.json  samples_gsm8k_cot_llama.jsonl
tasks/: __init__.py  _scoring.py  chartqa.py  gsm8k.py  sts.py  stsb.py
tests/: test_nano_eval.py
