[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-eval"
version = "0.1.0"
description = "Nano Eval - A minimal tool for verifying VLMs/LLMs across frameworks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thomas Børstad", email = "tboerstad@users.noreply.github.com" }]
keywords = ["llm", "evaluation", "benchmark", "openai", "api", "vllm", "tgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0,<4.0",
    "httpx>=0.28.1,<1.0",
    "pillow>=12.1.0,<13.0",
    "tqdm>=4.67.0,<5.0",
    "typing-extensions>=4.0,<5.0",
]

[project.scripts]
nano-eval = "nano_eval:main"

[project.urls]
Homepage = "https://github.com/tboerstad/lm-evaluation-harness"
Repository = "https://github.com/tboerstad/lm-evaluation-harness"
Issues = "https://github.com/tboerstad/lm-evaluation-harness/issues"

[project.optional-dependencies]
dev = ["pytest>=9.0.2,<10.0", "pytest-cov>=7.0.0,<8.0", "ruff>=0.14.10,<1.0", "pre-commit>=4.5.1,<5.0", "respx>=0.22.0,<1.0", "ty>=0.0.8,<1.0"]

[tool.setuptools]
py-modules = ["nano_eval", "core"]
packages = ["tasks"]

[tool.ruff.lint]
extend-select = ["I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["nano_eval", "core", "tasks"]
