[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-eval"
version = "0.1.0"
description = "Nano Eval - A minimal tool for verifying VLMs/LLMs across frameworks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thomas Børstad", email = "tboerstad@users.noreply.github.com" }]
keywords = ["llm", "evaluation", "benchmark", "openai", "api", "vllm", "tgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.0.0",
    "httpx>=0.23.0",
    "pillow>=9.0.0",
    "tqdm>=4.62.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
nano-eval = "nano_eval:main"

[project.urls]
Homepage = "https://github.com/tboerstad/nano-eval"
Repository = "https://github.com/tboerstad/nano-eval"
Issues = "https://github.com/tboerstad/nano-eval/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0", "pre-commit>=3.0.0", "respx>=0.20.0", "ty>=0.0.1"]

[tool.setuptools]
py-modules = ["nano_eval", "core"]
packages = ["tasks"]

[tool.ruff.lint]
extend-select = ["I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["nano_eval", "core", "tasks"]
